--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
 <h1>
   <a id=title href="/">scratchblocks dev</a>
   <span>
-    <a target="_blank" href="http://wiki.scratch.mit.edu/wiki/Block_Plugin/Syntax">help</a>
-    <a href="http://github.com/blob8108/scratchblocks2">github</a>
-    <a href="generator/"><b>generate</b></a>
+    <a target="_blank" href="http://wiki.scratch.mit.edu/wiki/Block_Plugin/Syntax">คู่มือการเขียนบล็อก</a>
+    <a href="http://github.com/blob8108/scratchblocks2">GitHub ของ ScratchBlocks</a>
   </span>
 </h1>
 
