Slight string translation

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
 <div id="side">
   <div>
+    เลือกภาษา:
     <select id="choose-lang">
       <option value="">อังกฤษ (ค่าเริ่มต้น)
     </select>
