Website to feature Sratch3bw + Scratch3 diagram

--- a/index.html
+++ b/index.html
@@ -219,17 +219,16 @@
 
     console.log(scratchblocks.stringify(doc));
     var docView3 = scratchblocks.newView(doc, {
-      style: "scratch3",
+      style: "scratch3-bw",
     });
     var docView2 = scratchblocks.newView(doc, {
-      style: "scratch2",
+      style: "scratch3",
     });
     var svg3 = docView3.render();
     var svg2 = docView2.render();
     preview.innerHTML = "";
     preview.appendChild(svg3);
     preview.appendChild(svg2);
-    svg3.classList.add("scratch3")
 
     // add export link
     setTimeout(function () {
