Slight HTML modify

--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
 </style>
 
 <!---------------------------------------------------------------------------->
-/
 <h1>
   <a id=title href="/">scratchblocks dev</a>
   <span>
@@ -71,6 +70,8 @@
     <select id="choose-lang">
       <option value="">อังกฤษ (ค่าเริ่มต้น)</option>
     </select>
+  </div>
+  <div>
     เลือกหน้าตา:
     <select id="choose-style">
       <option value="scratch3">Scratch 3 แบบสี</option>
