--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <div>
     เลือกภาษา:
     <select id="choose-lang">
-      <option value="">อังกฤษ (ค่าเริ่มต้น)</option>
+      <option value="en">อังกฤษ (ค่าเริ่มต้น)</option>
     </select>
   </div>
   <div>
@@ -94,12 +94,13 @@
   var exportSVGLink;
   var exportPNGLink;
 
-  var obj = {};
+  var obj = {
+    "lang": "en",
+    "style": "scratch3"
+  };
   extractHash();
 
   editor.addEventListener('input', function (e) {
-    obj.script = editor.value;
-    obj.script = editor.value;
     obj.script = editor.value;
     objUpdated();
   });
@@ -121,7 +122,6 @@
 
   chooseLang.addEventListener('change', function (e) {
     obj.lang = chooseLang.value;
-    obj.style = chooseStyle.value;
     console.log(obj);
     objUpdated();
   });
@@ -202,7 +202,7 @@
           var link = exportSVGLink = document.createElement('a');
           exportLink.href = scratchblocks.exportSVG(svg);
           exportLink.setAttribute('download', 'scratchblocks.svg');
-          exportLink.textContent = "ดาวน์โหลดเป็น SVG";
+          exportLink.textContent = "Export SVG";
           exportLink.className = 'export-link';
           var p = document.createElement('p');
           p.appendChild(exportLink);
@@ -238,7 +238,8 @@
       var link = exportSVGLink = document.createElement('a');
       link.href = docView3.exportSVG();
       link.setAttribute('download', 'scratchblocks.svg');
-      link.textContent = "ดาวน์โหลดเป็น SVG";
+      link.textContent = "ดาวน์โหลด SVG";
+
       link.className = 'export-link';
       document.body.appendChild(link);
 
@@ -247,7 +248,7 @@
         var link = exportPNGLink = document.createElement('a');
         link.href = pngDataURL;
         link.setAttribute('download', 'scratchblocks.png');
-        link.textContent = "ดาวน์โหลดเป็น PNGG";
+        link.textContent = "ดาวน์โหลด PNG";
         link.className = 'export-link';
         document.body.appendChild(link);
       }, 2);
