--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <meta charset="utf8">
 <meta name=viewport content="width=device-width, initial-scale=1">
 <title>scratchblocks dev</title>
+<link href="https://fonts.googleapis.com/css2?family=Sarabun:ital@1&display=swap" rel="stylesheet">
 
-<meta name=description content="Use scratchblocks to write pictures of Scratch scripts in forum posts.">
+
+<meta name=description content="สร้างภาพบล็อก Scratch แบบขาวดำ สำหรับนำไปพิมพ์ในข้อสอบ">
 
 <!--
 <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700">
@@ -57,7 +59,7 @@
 
 <!---------------------------------------------------------------------------->
 <h1>
-  <a id=title href="/">scratchblocks dev</a>
+  <a id=title href="/">สร้างบล็อกคำสั่ง Scratch แบบเป็นรูปภาพ</a>
   <span>
     <a target="_blank" href="http://wiki.scratch.mit.edu/wiki/Block_Plugin/Syntax">คู่มือการสร้างรูปบล็อกคำสั่ง</a>
     <a href="http://github.com/blob8108/scratchblocks2">ดัดแปลงจากไลบรารี ScratchBlocks บน GitHub</a>
