Removed ital property which appeared by incident

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf8">
 <meta name=viewport content="width=device-width, initial-scale=1">
 <title>scratchblocks dev</title>
-<link href="https://fonts.googleapis.com/css2?family=Sarabun:ital@1&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet">
 
 
 <meta name=description content="สร้างภาพบล็อก Scratch แบบขาวดำ สำหรับนำไปพิมพ์ในข้อสอบ">
