--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <a href="http://github.com/blob8108/scratchblocks2">ดัดแปลงจากไลบรารี ScratchBlocks บน GitHub</a>
   </span>
 </h1>
+<p style='font-style: italic;'>หากปุ่มบันทึกเป็น PNG ไม่ขึ้น สามารถกด Refresh ได้ (โค้ดที่พิมพ์ไว้จะไม่หาย)</p>
 
 <div id="side">
   <div>
