Updated block title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf8">
 <meta name=viewport content="width=device-width, initial-scale=1">
-<title>scratchblocks dev</title>
+<title>สร้างรูป Scratch</title>
 <link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet">
 
 
